<resources>
    <string name="app_name">UniConnect</string>
    <string name="action_settings">Settings</string>
    <string name="Appname">UniConnect</string>
    <string name="email">User Name</string>
    <string name="password">Password</string>
    <string name="enter">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="message_elipses">Message...</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="uni">University</string>
    <string name="sem">Semister</string>
    <string name="dept">Department</string>
    <string name="Type">Login Type</string>
    <string name="GRE">GRE Score</string>
    <string name="TOFEL">TOFEL or IELTS</string>
    <string name="banner_ad_unit_id">ca-app-pub-9819089571653252/6270049721</string>
</resources>
